# applique

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  ROADMAP.md  compose.observability.yml  compose.yml
.github/: dependabot.yml
.github/workflows/: publish-docs.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  logging.yml  mkdocs.yml  pyproject.toml
backend/applique_backend/: app.py  prestart.py
backend/applique_backend/alembic/: env.py
backend/applique_backend/alembic/versions/: 305914767b59_add_error_message_to_job_postings.py  648a37df3428_split_profile_name_into_first_and_last_.py  9d21d80181d1_add_user_profile_table.py  a8cabb549746_add_generation_history_table.py  fb66ff540989_init.py
backend/applique_backend/api/: deps.py  router.py  schemas.py
backend/applique_backend/api/routes/: chat.py  documents.py  llm.py  postings.py  profile.py  prompts.py  status.py
backend/applique_backend/core/: exceptions.py  settings.py  telemetry.py
backend/applique_backend/db/: core.py  crud.py  models.py
backend/applique_backend/services/: document_service.py  extraction.py  llm.py
backend/applique_backend/services/prompts/: manager.py
backend/applique_backend/services/prompts/templates/: chat_instructions.txt.jinja  job_information_extraction.txt.jinja
backend/docs/: architecture.md  configuration.md  development.md  getting-started.md  identity.md  index.md  user-guide.md
backend/tests/: conftest.py
backend/tests/services/: test_document_service.py
data/attachments/: .gitignore
data/cover_letters/: cover_letter.example.tex
data/cvs/: cv.example.tex
data/prompts/: README.md  chat_instructions.txt.jinja.example
frontend/: .cta.json  .dockerignore  Dockerfile  biome.jsonc  index.html  nginx.conf  package.json
frontend/public/: manifest.json
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: Breadcrumbs.tsx  FileVisibilityToggle.tsx  Footer.tsx  Header.tsx  HighlightedTextarea.tsx  LatexEditor.tsx  LatexHighlightedTextarea.tsx  PdfViewer.tsx  PromptEditor.tsx  StatusBadge.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/lib/: api.ts  chat-storage.ts  chat.ts  types.ts
frontend/src/routes/: __root.tsx  chat.tsx  documents.tsx  index.tsx  postings.tsx  settings.tsx
scripts/: dev_servers.sh
